# happy-family

./: .Makefile.swp  .cppcheck-result.xml.swp  .gitignore  .gtest_unittest.xml.swp  .sonar-happy-family.properties.swp  CMakeLists.txt  Makefile  ReadMe.md  coverage.xml  cppcheck-result.xml  gtest_unittest.xml  sonar-happy-family.properties  sonar-project.properties
include/: IEgg.h  IHusband.h  IMilkCarton.h  IStore.h
src/: HappyFamily.cpp  Husband.cpp  Husband.h  Wife.cpp  Wife.h  husband.cpp
unittest/: HappyFamilyTest.cpp  UnitTestMain.cpp  UnitTestMock.h
